[package]
name = "arch_bak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
file-owner = "0.1.2"
nix = "0.27.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
shellexpand = "3.1.0"
